--- a/CalOrdersJET/src/js/views/productSearch.html
+++ b/CalOrdersJET/src/js/views/productSearch.html
@@ -1,3 +1,4 @@
+
 <!--
  * The MIT License
  *
@@ -43,7 +44,7 @@
     </div>
     <!-- end global error message -->
 
-    <div class="oj-panel oj-flex">
+    <div class="oj-panel oj-flex oj-sm-flex-wrap-nowrap">
 
         <!-- Product Left Hand Navigation Panel -->
         <div id="productSearchNavigationPanel" class="oj-panel oj-sm-2 oj-flex-item oj-sm-only-hide" style="min-width: 150px">
@@ -97,7 +98,7 @@
         </div>
 
         <!-- Product Search Results Panel -->
-        <div id="productSearchWrapperDiv" class="oj-panel oj-flex-item">
+        <div id="productSearchWrapperDiv" class="oj-panel oj-flex-item oj-sm-10">
             <div class="justifyCenter">
                 <div class="oj-flex oj-flex-items-pad">
                     <div class="oj-flex-item oj-sm-12" style="padding-bottom: 10px">
@@ -231,7 +232,7 @@
         </ul>
     </div>
     <div class="oj-flex oj-flex-items-pad">
-        <div id="paging" data-bind="ojComponent: {component: 'ojPagingControl', data: cardViewDataSource, pageSize: 2, pageOptions: {layout: [ medium() ? 'auto' : 'nav']}}">
+        <div id="paging" data-bind="ojComponent: {component: 'ojPagingControl', data: cardViewDataSource, pageSize: 20, pageOptions: {layout: [ medium() ? 'auto' : 'nav']}}">
         </div>
     </div>
 </script>
@@ -239,7 +240,7 @@
 <!-- Product Card view (card format)  -->
 <script id="productcard_template" type="text/html">
     <li class="oj-flex-item oj-sm-12 oj-md-6 oj-lg-4 oj-xl-3" style="margin:0;border-style:none">
-        <div class="oj-panel oj-panel-alt1" style="margin: 5px 0px 10px 0px;">
+        <div class="oj-panel oj-panel-alt1" style="margin: 5px 0px 10px 0px; min-height: 300px">
 
             <div data-bind="click: $parent.navigateToProductDetail">
 
@@ -254,20 +255,22 @@
 
             <div class="oj-padding-vertical"></div>
 
-            <div class="oj-flex-item">
-                <button id= "addToCart" data-bind="click: $parent.addToCart, ojComponent: { component: 'ojButton', label: 'Add to Cart'}"></button> 
-            </div>
+            <div style="position: absolute; bottom: 0px">
+                <div class="oj-flex-item">
+                    <button id= "addToCart" data-bind="click: $parent.addToCart, ojComponent: { component: 'ojButton', label: 'Add to Cart'}"></button> 
+                </div>
 
-            <div class="oj-flex-item">
-                <div id="compareProductWrapper" 
-                     data-bind=
-                     "ojComponent: {
+                <div class="oj-flex-item" >
+                    <div id="compareProductWrapper" 
+                         data-bind=
+                         "ojComponent: {
                         component: 'ojCheckboxset', 
                         value: compareProduct}" >
-                    <span class="oj-choice-row">
-                        <input data-bind="attr: {id: 'compareProduct' + $data['prdUid']}" type="checkbox" value="true">
-                        <label data-bind="attr: {for: 'compareProduct' + $data['prdUid']}">Compare</label>
-                    </span>
+                        <span class="oj-choice-row">
+                            <input data-bind="attr: {id: 'compareProduct' + $data['prdUid']}" type="checkbox" value="true">
+                            <label data-bind="attr: {for: 'compareProduct' + $data['prdUid']}">Compare</label>
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
@@ -283,7 +286,7 @@
             item: {template: 'productlist_template'}}">
     </ul>
     <div class="oj-flex oj-flex-items-pad">
-        <div id="paging" data-bind="ojComponent: {component: 'ojPagingControl', data: cardViewDataSource, pageSize: 2, pageOptions: {layout: [medium() ? 'auto' : 'nav']}}">
+        <div id="paging" data-bind="ojComponent: {component: 'ojPagingControl', data: cardViewDataSource, pageSize: 20, pageOptions: {layout: [medium() ? 'auto' : 'nav']}}">
         </div>
     </div>
 </script>
@@ -304,8 +307,8 @@
 
                 <div class="oj-flex-item oj-md-4 oj-sm-float-end">
                     <button id= "addToCart" data-bind="click: $parent.addToCart, ojComponent: { component: 'ojButton', label: 'Add to Cart'}"></button>
-                    
-                     <div id="compareProductWrapper"
+
+                    <div id="compareProductWrapper"
                          data-bind=
                          "ojComponent: {
                         component: 'ojCheckboxset', 
