[#139507125] Fixed an issue on the login screen where clicking on the static text brought the user back to the welcome page.

--- a/CalOrdersJET/src/js/views/login.html
+++ b/CalOrdersJET/src/js/views/login.html
@@ -63,7 +63,7 @@
 
                 <!--<p>Do you need to <a href="#">register</a> for a new account?</p>-->
                 
-                 <div id="registerPanel" class="oj-flex-item" aria-label="Register" tabindex="0" role="link" data-bind="click: function(){history.pushState(null, '', 'registrationCompany.html'); oj.Router.sync();}, event:{click:onClickLoadRegistration}">
+                 <div id="registerPanel" class="oj-flex-item" aria-label="Register" tabindex="0" role="link">
                      <!--<span>Do you need to <a href="#">register</a> for a new account?</span>-->
                      <span>To access the system as an user, enter 'rickybobby'.</span>
                      <div class="oj-padding-vertical"></div>
