[#139963273]  Update Product page, initial commit.

--- a/CalOrdersJET/src/js/views/productUpdate.html
+++ b/CalOrdersJET/src/js/views/productUpdate.html
@@ -24,7 +24,7 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
 -->
-<div id="productAddWrapper" class="oj-hybrid-padding">
+<div id="productUpdateWrapper" class="oj-hybrid-padding">
 
     <div class="oj-form">
 
@@ -49,7 +49,7 @@ THE SOFTWARE.
 
 
             <h2>Add Product</h2>
-            <div id="productAddContent" class="oj-panel oj-flex-item">
+            <div id="productUpdateContent" class="oj-panel oj-flex-item">
                 <!-- global error messages -->
                 <div class="oj-messaging-inline-container" id="pageError" aria-live="polite" hidden>
                     <div class="oj-message oj-message-error">
