--- a/CalOrdersJET/src/js/views/cart.html
+++ b/CalOrdersJET/src/js/views/cart.html
@@ -47,10 +47,11 @@
     <!-- Page Content -->
     <div class="oj-panel oj-flex oj-sm-flex-wrap-nowrap">
         <div id="cartWrapperDiv" class="oj-panel oj-flex-item oj-sm-flex-wrap-nowrap">
-
+ <!-- ko if: ready -->
             <div id="productlistview" >
                 <div class="oj-flex oj-flex-items-pad oj-sm-flex-direction-column" data-bind="template: large() ? 'productListLayout' : 'productCardLayout'"></div>
             </div>
+                 <!-- /ko -->
 
             <!-- Product Card View -->
             <script id="productCardLayout" type="text/html">
@@ -81,6 +82,14 @@
                                 </div>
                                 <div class="oj-flex-item">
                                     <h3 aria-label="product description" data-bind="text: $data['prdName']" tabindex="0"></h3>
+<!--
+                                    <label for="relatedServices">Related Services:</label>
+                                    <select id="relatedServices" 
+                                            data-bind="ojComponent: {
+                                    component: 'ojSelect', value: relatedServices, required: false,
+                                    options: $data['relatedServices']}">
+                                    </select>  
+-->
                                     <div class="oj-flex-item oj-sm-12 oj-lg-2">
                                         <span data-bind="text: $data['quantity']"/>
                                     </div>
@@ -103,7 +112,7 @@
             item: {template: 'productlist_template'}}">
                         </ul>
                         <div class="oj-flex oj-flex-items-pad">
-                            <div id="paging" data-bind="ojComponent: {component: 'ojPagingControl', data: cardViewDataSource, pageSize: 2}">
+                            <div id="paging" data-bind="ojComponent: {component: 'ojPagingControl', data: cardViewDataSource, pageSize: 4}">
                             </div>
                         </div>
                         </script>
@@ -117,19 +126,30 @@
                                             <img alt="product image" class="demo-circular demo-employee-photo" style="float:left;" 
                                                  height="100" width="100" 
                                                  data-bind="attr: {id: 'productImage' + $data['prdUid'], src: $parent.getPhoto($data)}"/>
-                                            <div class="demo-employee-name" data-bind="text: $data['prdName']"></div>
+                                            <div class="demo-employee-name" data-bind="text: $data['prdName']"></div>                                         
+                                           <label for="relatedServices">Related Services:</label>
+                                            <select id="relatedServices" 
+                                                    data-bind="ojComponent: {
+                                    component: 'ojSelect', value: $data['selectedRelatedService'], required: false,
+                                    options: $data['relatedServices'],
+                                rootAttributes: {style:'max-width:20em'}}">
+                                            </select> 
+                                           <button id= "addRelatedService" 
+                                    data-bind="click: $parent.addRelatedService, ojComponent: { component: 'ojButton', label: 'Add Related Service' }">
+                                        </button> 
                                         </div>
-                                        <div class="oj-flex-item oj-sm-12 oj-lg-2">
-                                            <span data-bind="text: $data['quantity']"/>
-                                        </div>
-
-                                        <div class="oj-flex-item oj-lg-5 oj-md-4">
-
-                                            <div class="oj-flex-item oj-sm-only-hide oj-md-4 oj-md-float-end">
-                                                <span>Price: </span><div class="demo-employee-tenure" data-bind="text: '$' + $data['prdPrice']"></div>
+                                            <div class="oj-flex-item oj-sm-12 oj-lg-2">
+                                                <span data-bind="text: $data['quantity']"/>
                                             </div>
-                                        </div>
 
+                                            <div class="oj-flex-item oj-lg-5 oj-md-4">
+
+                                                <div class="oj-flex-item oj-sm-only-hide oj-md-4 oj-md-float-end">
+                                                    <span>Price: </span><div class="demo-employee-tenure" data-bind="text: '$' + $data['prdPrice']"></div>
+                                                </div>
+                                            </div>
+
+                                        </div>
                                     </div>
                                 </div>
                             </li>
